@@ -1,6 +1,7 @@
 *** WooCommerce Shipping & Tax Changelog ***
 = 1.25.10 - 2021-xx-xx =
 * Add   - Add an endpoint for shipping label creation eligibility and share code for store eligibility.
+* Tweak - Stop retrying to fetch /services when authentication fails on connect server.
 
 = 1.25.9 - 2021-03-17 =
 * Add   - WC Admin notice about DHL live rates.
